# MeditativeMarble

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/models/: sphere.blend  sphere.mtl
resources/shaders/opengl/: blinnphong.frag
resources/shaders/vulkan/: 3D-lighting.vert  blinnphong.frag  blinnphong.frag.spv
resources/textures/: terrian_tex.aseprite  test.kra
src/: CMakeLists.txt  debug.cpp  debug.h  main.cpp  model_gen.cpp  model_gen.h  noise.cpp  noise.h  physics.cpp  physics.h  player.cpp  player.h  third_person_cam.cpp  third_person_cam.h  world.cpp  world.h
